<resources>
  <string name="app_name">TMDBCleanArchitecture</string>
  <string name="title_upcoming">Upcoming</string>
  <string name="title_popular">Popular</string>
  <string name="title_favorites">Favorites</string>
    <string name="try_again">try again</string>
  <string name="release_date">Release Date</string>
  <string name="original_language">Original Language</string>
  <string name="original_title">Original Title</string>
  <string name="story">Story</string>
</resources>