<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
      android:id="@+id/navigation_upcoming"
      android:icon="@drawable/ic_baseline_tv_24"
      android:title="@string/title_upcoming" />

  <item
      android:id="@+id/navigation_popular"
      android:icon="@drawable/ic_baseline_tv_24"
      android:title="@string/title_popular" />

  <item
      android:id="@+id/navigation_favorites"
      android:icon="@drawable/ic_baseline_favorite_border_24"
      android:title="@string/title_favorites" />

</menu>